--- a/euler-pc/styles/common/modal.less
+++ b/euler-pc/styles/common/modal.less
@@ -1,4 +1,4 @@
-@import "base.less";
+@import "../base.less";
 
 /deep/.ec-modal {
   padding-bottom: 0;
@@ -8,6 +8,7 @@
     flex-flow: column;
     border-radius: @ecRadius;
     .ant-modal-header {
+      height: 39px;
       padding: 8px 12px;
       border-radius: @ecRadius @ecRadius 0 0;
       box-sizing: border-box;
