update style of ecContainer

--- a/euler-pc/styles/common/container.less
+++ b/euler-pc/styles/common/container.less
@@ -9,7 +9,7 @@
   .ec-container-header {
     background-color: #ffffff;
     box-sizing: border-box;
-    border-bottom: 1px solid @ecBorderColor;
+    border-bottom: 1px solid @ecContainerBg;
   }
 
   .ec-container-body {
@@ -28,7 +28,7 @@
     background-color: #ffffff;
     padding: @ecFooterPadding;
     box-sizing: border-box;
-    border-top: 1px solid @ecBorderColor;
+    border-top: 1px solid @ecContainerBg;
     text-align: right;
   }
 }
