panel兼 兼容处理

--- a/euler-pc/styles/common/panel.less
+++ b/euler-pc/styles/common/panel.less
@@ -91,6 +91,10 @@
     flex: 1 0 100px;
     position: relative;
 
+    &.ec-panel-auto {
+      flex: none;
+    }
+
     .ec-panel-body__inner {
       position: absolute;
       top: 0;
