--- a/euler-pc/styles/common/v-layout.less
+++ b/euler-pc/styles/common/v-layout.less
@@ -11,7 +11,7 @@
     overflow: auto;
     margin-top: @ecLayoutVSpace;
 
-    &.ec-inner {
+    &.ec-v-unauto {
       position: relative;
 
       .ec-v-layout-item__inner {
