样式文件规整

--- a/euler-pc/styles/common/panel.less
+++ b/euler-pc/styles/common/panel.less
@@ -1,5 +1,3 @@
-@import "../base.less";
-
 .ec-panel {
   width: 100%;
   height: 100%;
@@ -52,13 +50,9 @@
       flex: none;
       align-self: center;
 
-      .ec-panel-header__tool__btn {
-        margin-left: 8px;
-
-        &:hover {
-          cursor: pointer;
-          color: @ecPrimary;
-        }
+      .ec-panel-header__tool__btn:hover {
+        cursor: pointer;
+        color: #1890ff;
       }
     }
   }
