--- a/euler-pc/styles/base.less
+++ b/euler-pc/styles/base.less
@@ -1,29 +1,3 @@
-/* 全局通用样式配置 */
-/* 页面容器 EcContainer */
-@ecContainerBg: #f5f6f8; //页面容器-背景
-@ecContainerPadding: 12px; //页面容器-内边距
-
-/* 布局容器 EcVLayout/EcHLayout */
-@ecLayoutVSpace: 8px; //垂直布局容器-分区间隔
-@ecLayoutHSpace: 8px; //水平布局容器-分区间隔
-
-/* 面板 EcPanel */
-@ecPanelBg: #ffffff; //面板-背景
-@ecPanelPadding: 8px 12px; //面板-内边距
-@ecPanelSpace: 8px; //面板-分区间隔
-
-/* 查询面板 EcQueryPanel */
-@ecFormItemVSpace: 12px; //表单项(查询项)之间的垂直间隔
-@ecFormItemHSpace: 16px; //表单项(查询项)之间的水平间隔
-
-/* 其他通用样式 */
-@ecFooterPadding: 8px 12px; //底部操作区-内边距
-@ecRadius: 4px; //通用边框圆角大小，作用于查询区、面板、表单分组、弹窗等 (请设置单个数值)
-@ecBtnSpace: 8px; //按钮之间的间距 (通常施加于按钮的左外边距)
-@ecBorderColor: #e8e8e8; //默认边框颜色
-@ecTitleColor: #000000D9; //标题、表单项、查询项文本域文字颜色
-@ecPrimary: #1890ff; //便捷操作按钮的hover状态颜色
-
 * {
   font-family: '微软雅黑', 'Microsoft YaHei', Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -54,10 +28,59 @@
 /* 标题 */
 .ec-title {
   display: inline-block;
-  color: @ecTitleColor;
+  color: #000000D9;
   font-size: 14px;
   font-weight: bold;
   font-family: "微软雅黑 Bold", "微软雅黑 Regular", "微软雅黑", sans-serif;
+  margin: 2px 0;
 }
 
+/* 按钮左侧间距 */
+.ec-btn-ml {
+  margin-left: @ecBtnSpace;
+}
 
+/* a-button 按钮间的间距 */
+.ant-btn + .ant-btn {
+  margin-left: @ecBtnSpace;
+}
+
+/* 标签页Tabs */
+.ec-tabs.ant-tabs-top {
+  width: 100%;
+  height: 100%;
+
+  .ant-tabs-bar.ant-tabs-top-bar {
+    margin-bottom: 0;
+  }
+
+  .ant-tabs-content.ant-tabs-top-content {
+    height: calc(100% - 45px) !important;
+
+    .ant-tabs-tabpane {
+      height: 100%;
+      overflow: auto;
+    }
+  }
+
+  &.ant-tabs-small .ant-tabs-content.ant-tabs-top-content {
+    height: calc(100% - 37px) !important;
+  }
+
+  &.ant-tabs-large .ant-tabs-content.ant-tabs-top-content {
+    height: calc(100% - 53px) !important;
+  }
+}
+
+@import "common/container";
+@import "common/v-layout";
+@import "common/h-layout";
+@import "common/panel";
+@import "common/modal";
+@import "common/inline";
+@import "view/query-panel";
+@import "view/query-item";
+@import "view/higher-query";
+@import "view/handy";
+@import "view/export";
+@import "view/setting";
