--- a/euler-pc/styles/common/container.less
+++ b/euler-pc/styles/common/container.less
@@ -1,13 +1,15 @@
-@import "../base.less";
-
 .ec-container {
   width: 100%;
   height: 100%;
+  min-width: 1080px;
+  min-height: 456px;
+  overflow: hidden;
   display: flex;
   flex-flow: column;
 
   .ec-container-header {
     background-color: #ffffff;
+    padding: @ecPanelPadding;
     box-sizing: border-box;
     border-bottom: 1px solid @ecContainerBg;
   }
@@ -19,16 +21,17 @@
     box-sizing: border-box;
     overflow: auto;
 
-    &.no-padding {
+    &.ec-container-no-padding {
       padding: 0;
     }
   }
 
   .ec-container-footer {
     background-color: #ffffff;
-    padding: @ecFooterPadding;
+    padding: @ecPanelPadding;
     box-sizing: border-box;
     border-top: 1px solid @ecContainerBg;
     text-align: right;
   }
 }
+
