--- a/euler-pc/styles/view/handy.less
+++ b/euler-pc/styles/view/handy.less
@@ -1,16 +1,17 @@
-@import "../base.less";
-
 .ec-handy {
   display: inline-block;
-  margin-left: @ecBtnSpace;
 
   .ec-handy-btn {
-    font-size: 16px;
     color: #aabbcc;
+
+    svg {
+      font-size: 16px;
+    }
+
 
     &:hover {
       cursor: pointer;
-      color: @ecPrimary;
+      color: #1890ff;
     }
   }
 }
